feat: Implement standalone components with routing and modular structure
- Adopted Angular's standalone component architecture for cleaner and modern project setup.
- Configured lazy-loading routes with loadComponent for Dashboard, Employees, and Departments.
- Updated folder structure:
  - Added features/home with DashboardComponent.
  - Added features/employees and features/departments with respective components.
  - Added features/error, header, footer, and search for modular functionality.
- Removed traditional NgModule configurations where not needed.
- Included core services (auth.service) in core/services.
- Updated main.ts to bootstrap the application with standalone components.
- Cleaned up unused files (app.routes.ts, dashboard.module.ts).
- Enhanced .gitignore to exclude package-lock.json and temporary files.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /node_modules
 npm-debug.log
 yarn-error.log
+package-lock.json
 
 # IDEs and editors
 .idea/
@@ -40,3 +41,42 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Logs and temporary files
+*.log
+*.tmp
+
+# Environment and secret files
+.env
+.env.local
+.env.*.local
+
+# MacOS-specific files
+.AppleDouble
+.LSOverride
+
+# Windows-specific files
+Desktop.ini
+$RECYCLE.BIN/
+
+# Build artifacts
+/build/
+*.build
+
+# Angular-specific
+.angular/cache
+.angular/server
+
+# Temporary and debug files
+*.bak
+*.swp
+*.temp
+*.pid
+*.seed
+*.gz
+
+# IntelliJ IDEA and WebStorm
+*.iml
+.idea/modules.xml
+.idea/*.iml
+.idea/workspace.xml
