--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "scripts": {
   "ng": "ng",
-  "start": "ng serve --proxy-config proxy.conf.json",
-  "start:dev": "ng serve --configuration=development --proxy-config proxy.conf.json",
+  "start": "ng serve --proxy-config proxy.conf.local.json",
+  "start:local": "ng serve --configuration=development --proxy-config proxy.conf.local.json",
+  "start:cloud": "ng serve --configuration=development --proxy-config proxy.conf.cloud.json",
+  "build": "ng build",
   "watch": "ng build --watch --configuration=development",
   "test": "ng test",
   "lint": "ng lint",
