--- a/angular.json
+++ b/angular.json
@@ -65,6 +65,7 @@
         },
         "serve": {
           "options": {
+            "proxyConfig": "proxy.conf.prod.json"
           },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
