--- a/angular.json
+++ b/angular.json
@@ -65,7 +65,7 @@
         },
         "serve": {
           "options": {
-            "proxyConfig": "proxy.conf.prod.json"
+            "proxyConfig": "proxy.conf.local.json"
           },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
